# GeCo

./: README.md  demo.py  evaluate.py  evaluate_bboxes.py  main.py  paths.py  pretrain.py  pyproject.toml  train.py
geco/: __init__.py
geco/models/: DQE.py  backbone.py  geco.py  matcher.py
geco/utils/: losses.py
models/: geco.py  geco_infer.py
src/geco/: download_weights.py  paths.py
src/geco/models/: backbone.py  geco.py
src/geco/segment_anything/: predictor.py
src/models/: DQE.py  backbone.py  geco.py  matcher.py
src/segment_anything/: predictor.py
src/utils/: losses.py
