[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geco"
version = "0.1.0"
description = "A pip installable version of the GeCo model. Original source: https://github.com/jerpelhan/GeCo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "pycocotools>=2.0.10",
    "requests>=2.32.5",
    "scipy>=1.16.3",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
]

[tool.setuptools]
package-dir = {"" = "geco"}
